<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_popcorn"
        android:title="@string/home"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_movies"
        android:enabled="true"
        android:icon="@drawable/ic_movies"
        android:title="@string/movies"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_showings"
        android:enabled="true"
        android:icon="@drawable/ic_showings"
        android:title="@string/showings"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_cinemas"
        android:enabled="true"
        android:icon="@drawable/ic_cinemas"
        android:title="@string/cinemas"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_selection"
        android:enabled="true"
        android:icon="@drawable/ic_star"
        android:title="@string/valorades"
        app:showAsAction="ifRoom|withText" />
</menu>