<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        android:fontFamily="@font/nunito_sans_black"
        android:text="@string/i_consent"/>
    
    <ScrollView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Switch
                android:id="@+id/usage_stats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:textSize="16sp"
                android:text="@string/usage_stats" />

            <Switch
                android:id="@+id/crash_reports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:textSize="16sp"
                android:fontFamily="@font/nunito_sans_semibold"
                android:text="@string/crash_reports" />
        </LinearLayout>
    </ScrollView>
    
    <Button
        android:id="@+id/okayButton"
        android:text="@string/ok"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:layout_gravity="bottom|center_horizontal"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorAccent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</LinearLayout>