<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/darkGrey"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_margin="36dp"
        android:src="@drawable/muvicat_logo"/>
    <ScrollView
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:text="@string/muvicat_privacy_policy"/>
    </ScrollView>

    <TextView
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/nunito_sans_bold"
        android:text="@string/by_clicking_accept"
        android:textSize="14sp"
        android:gravity="center"
        android:textColor="@color/colorPrimary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/acceptButton"
        android:layout_margin="30dp"
        style="?android:attr/borderlessButtonStyle"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:layout_gravity="center"
        android:fontFamily="@font/nunito_sans_extrabold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"/>
</LinearLayout>