<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehaviour"
    android:background="@color/colorPrimary"
    android:paddingTop="30dp">

    <TextView
        android:fontFamily="@font/nunito_sans_bold"
        android:textSize="16sp"
        android:text="@string/yourRating"
        android:textColor="@color/grey"
        android:layout_width="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_height="wrap_content" />
    <TextView
        android:text="3.5 / 5"
        android:id="@+id/userRatingValue"
        android:fontFamily="@font/nunito_sans_black"
        android:textSize="36sp"
        android:layout_marginBottom="22dp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <me.zhanghai.android.materialratingbar.MaterialRatingBar
        android:id="@+id/userRatingBar"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="0.5"
        app:mrb_fillBackgroundStars="true"
        app:mrb_progressBackgroundTint="@color/darkRed"
        app:mrb_progressTint="@color/lightRed"
        android:layout_marginBottom="60dp"/>

    <RelativeLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/deleteRatingButton"
            android:text="@string/delete_rating"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@color/colorAccent"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:layout_marginStart="30dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentStart="true"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/sendRatingButton"
            android:text="@string/send_rating"
            style="?android:attr/borderlessButtonStyle"
            android:textColor="@android:color/black"
            android:fontFamily="@font/nunito_sans_extrabold"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="20dp"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</LinearLayout>